# QaterialHotReload

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  flake.nix
.github/workflows/: clang-format.yml  linux-appimage.yml  macos-dmg.yml  nix.yml  remove-old-artifacts.yml  windows-installer.yml
cmake/: CPM.cmake  Configuration.cmake  Dependencies.cmake  FetchDependencies.cmake  FetchQaterial.cmake  FetchQtLinuxCMake.cmake  FetchQtMacCMake.cmake  FetchQtStaticCMake.cmake  FetchQtWindowsCMake.cmake  FetchSortFilterProxyModel.cmake  PrintConfiguration.cmake  Version.cmake
qml/Qaterial/HotReload/: CMakeLists.txt  HotReload.qml  HotReloadWindow.qml  IconsMenu.qml  ImportPathMenu.qml  Imports.qml  Main.qml  MaterialPaletteMenu.qml  SplashScreenApplication.qml  SplashScreenWindow.qml  StatusView.qml  TypoMenu.qml  qmldir
qml/Qaterial/HotReloadApp/: CMakeLists.txt
src/Qaterial/HotReload/: HotReload.cpp  HotReload.hpp
src/Qaterial/HotReload/Pch/: Pch.hpp
src/Qaterial/HotReloadApp/: Main.cpp
